cái thiện thiệp, một số thứ khác

--- a/index.html
+++ b/index.html
@@ -12,23 +12,32 @@
         <link rel="stylesheet" href="bigMessage.css">
         <link rel="stylesheet" href="style.css">
         <title>???</title>
-        <script type="module" src="script.js"></script>
         <script type="module" src="notification.js"></script>
         <script type="module" src="encryptPassword.js"></script>
         <script type="module" src="theme.js"></script>
         <script type="module" src="story.js"></script>
+        <script type="module" src="script.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body class="lightMode" id="body">
     <div class="cardBox" id="cardBox">
         <div id="card">
-            <h1 class="title">Big Title</h1>
-            <div class="cardMessage">Lorem ipsum dolor sit amet.<br><br> consectetur adipiscing elit. In euismod est nibh, tincidunt viverra sapien fringilla ut. In rutrum tortor vitae lorem iaculis, at mollis nibh vehicula. Integer consectetur eget sapien non eleifend. Maecenas lorem felis, pharetra quis libero nec, lacinia porta neque. Suspendisse sapien ex, congue ac laoreet a, porttitor et sem. Etiam malesuada sodales ornare. Suspendisse lacinia ullamcorper purus. Nulla vehicula placerat rutrum. Maecenas lacinia ante sit amet nibh lacinia fringilla ac vel neque. Maecenas et leo eros.</div>
+            <h1 class="title">Quà nhỏ</h1>
+            <div id="cardMessage" class="cardMessage">Lorem ipsum dolor sit amet.<br><br> consectetur adipiscing elit. In euismod est nibh, tincidunt viverra sapien fringilla ut. In rutrum tortor vitae lorem iaculis, at mollis nibh vehicula. Integer consectetur eget sapien non eleifend. Maecenas lorem felis, pharetra quis libero nec, lacinia porta neque. Suspendisse sapien ex, congue ac laoreet a, porttitor et sem. Etiam malesuada sodales ornare. Suspendisse lacinia ullamcorper purus. Nulla vehicula placerat rutrum. Maecenas lacinia ante sit amet nibh lacinia fringilla ac vel neque. Maecenas et leo eros.</div>
             <div class="author">
                 <img class="avtCard" src="Tkien2.png">
                 <div class="name">Tkien2</div>
+                <div class="github">
+                    <a style="text-decoration: none; color: white;" href="https://github.com/Tkien2/specialGift">
+                        <ion-icon name="logo-github" id="githubIcon"></ion-icon>
+                    </a>
+                </div>
             </div>
+            <div class="dec1 dec"></div>
+            <div class="dec2 dec"></div>
+            <div class="dec3 dec"></div>
+            <div class="dec4 dec"></div>
         </div>
     </div>
     <div class="lightMode" id="notificationBox">
